# Dsp_hw

./: CMakeLists.txt  README.md
dsp_hw1/: acc1.txt  model_01.txt  model_02.txt  model_03.txt  model_04.txt  model_05.txt  result1.txt
dsp_hw1/c_cpp/: forbackward.h  hmm.h  test.c  test_hmm.c  train.c  viterbi.h
